--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -529,6 +529,9 @@ a:hover {
   color: #b7b7b7;
 }
 /* Scroll to top button*/
+.scrollToTop_wraper {
+  display: none;
+}
 #scrollToTop a {
   background: #444444;
 }
@@ -920,7 +923,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rabMn1bpyO {
-  background-image: url("../../../assets/images/background7.jpg");
+  background-image: url("../../../assets/images/20200218-155620.jpeg");
 }
 .cid-rabMn1bpyO .slider-text-two {
   background: rgba(255, 255, 255, 0.8) none repeat scroll 0 0;
@@ -1044,9 +1047,47 @@ section.lazy-placeholder:after {
     text-align: center !important;
   }
 }
+.cid-rUK4MnRaBF {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background-image: url("../../../assets/images/background3.jpg");
+}
+.cid-rUK4MnRaBF .slider-text-two {
+  background: rgba(255, 255, 255, 0.8) none repeat scroll 0 0;
+  display: inline-block;
+  outline: 1px solid rgba(0, 0, 0, 0.2);
+  outline-offset: -15px;
+  padding: 65px 50px;
+  position: relative;
+}
+.cid-rUK4MnRaBF .mbr-section-title,
+.cid-rUK4MnRaBF .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-rUK4MnRaBF .mbr-section-subtitle span {
+  font-weight: bold;
+}
+.cid-rUK4MnRaBF .mbr-text {
+  color: #232323;
+  font-weight: 100;
+}
+.cid-rUK4MnRaBF .mbr-section-btn {
+  color: white;
+}
+@media (max-width: 767px) {
+  .cid-rUK4MnRaBF .row {
+    margin-left: -15px;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-rUK4MnRaBF .slider-text-two {
+    outline: 15px solid rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+  }
+}
 .cid-rUDEOcDwp1 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rUDEOcDwp1 .mbr-iconfont {
@@ -1086,34 +1127,13 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rUDEKvy39v {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
-}
-.cid-rUDEJeOjFh {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rUDEJeOjFh blockquote {
-  color: #232323;
-  font-size: inherit;
-  font-style: normal;
-}
-.cid-rUDEJeOjFh .mbr-iconfont {
-  z-index: 1;
-  position: absolute;
-  font-size: 9rem;
-  color: #232323;
-  opacity: .1;
-}
-.cid-rUDEJeOjFh .mbr-iconfont.right-top {
-  right: -1rem;
-  top: -1rem;
 }
 .cid-rUDERSHsOk {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rUDERSHsOk .subicon-title {
@@ -1227,8 +1247,8 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-rUDF3eM0TL {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rUDF3eM0TL .mbr-slider .carousel-control {
@@ -1361,9 +1381,9 @@ section.lazy-placeholder:after {
   display: inline-block;
 }
 .cid-rtVc5emtFp {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
+  padding-top: 45px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-rtVc5emtFp .mbr-section-heading {
   margin-bottom: 1.5em;
